With vrr and atomic modesetting, some cursor plane updates are dropped
Whenever the cursor does not drive the refresh rate with vrr and the refresh rate is below the maximum refresh rate of the monitor, amdgpu only updates the hardware cursor every few frames. The exact causality is still unclear, as the driver shouldn't even know which plane is used to drive the refresh rate.
This is visible with both Mutter and KWin: https://gitlab.gnome.org/GNOME/mutter/-/merge_requests/1154#note_1566438, https://invent.kde.org/plasma/kwin/-/merge_requests/2497. I also patched the KWin merge request to show the software cursor and hardware cursor at the same time, which shows the problem very directly. The lighter version of the cursor is the software cursor, the darker one is the hardware cursor:
For replicating that test, compile the merge request and set adaptive sync to "always" in the settings. It should be immediately visible.
I tested this with a rx 6800 XT, but I assume other GPUs are affected as well.